# local-transcribe

./: .env.example  .gitignore  .rooignore  README.md  TODO  TODO.list  build_turns_from_segments.py  create_dummy_audio.py  errors  example_asr_plugin.py  generate_all_outputs.py  main.py  mfa_config.yaml  pyproject.toml  run_10min_test.py  run_clean.py  setup_mfa.sh  setup_project.sh  test_deidentify_prompt.py  test_granite_mfa_segment.py  test_turn_builder_full.py  test_writers.py  turns.ideas
.debug_utils/: audio_cropper.py  compare_csv_transcripts.py  compare_transcriptions.py  compare_transcripts.py  debug_alignment_video.py  directory_list.py  find_overlaps.py  generate_all_outputs.py  list_models.py  llm-csv-comparator.py  test_granite_mfa_segment.py
.debug_utils/transcript_comparison/: data_structures.py  engine.py  metrics.py  preprocessing.py  similarity.py
Plans/: improved_data_format_design.plan
init_scripts/: download_models.py
local_transcribe/: __init__.py
local_transcribe/asr/: asr.py
local_transcribe/core/: __init__.py  builtin_plugins.py  plugin_discovery.py  plugins.py
local_transcribe/diarize/: diarize.py
local_transcribe/dual_track/: merge.py
local_transcribe/framework/: __init__.py  checkpoint_loader.py  cli.py  model_downloader.py  output_manager.py  pipeline_context.py  pipeline_reentry.py  pipeline_runner.py  pipeline_stages.py  plugin_discovery.py  plugin_interfaces.py  plugin_manager.py  plugins.py  provider_setup.py  setup.py
local_transcribe/lib/: audio_cropper.py  audio_io.py  config.py  (+12 more)
notebooks/: Transcribe.ipynb
scripts/: download_models.py  setup_project.sh
setup/: setup_project.sh
src/: __init__.py  asr.py  audio_io.py  config.py  cross_talk.py  csv_writer.py  diarize.py  logging_config.py  markdown_writer.py  merge.py  progress.py  render_black.py  session.py  srt_vtt.py  turns.py  txt_writer.py
tests/: run_all_cross_talk_tests.py  test_basic_cross_talk.py  test_cli_cross_talk.py  test_csv_writer_cross_talk.py  test_diarization_fix.py  test_dual_audio.py  test_end_to_end_cross_talk.py  test_error_handling_cross_talk.py  test_integration_cross_talk.py  test_memory_monitoring.py  test_performance_cross_talk.py  test_progress.py  test_progress_integration.py  test_split_audio_turn_builders.py  test_trace.py  test_turn_builder_llm.py  test_turns_cross_talk.py  test_txt_writer_cross_talk.py
(+135 files in other folders)
