[project]
name = "local-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper",
    "ffmpeg-python",
    "librosa",
    "numpy",
    "pandas",
    "pyannote-audio==4.0.1",
    "pydub",
    "rich",
    "soundfile",
    "torch",
    "torchaudio",
    "tqdm",
    "whisperx==3.4.2",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
]
