[project]
name = "local-transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.28.0",
    "librosa>=0.11.0",
    "mlx-whisper>=0.4.3",
    "numpy>=2.3.4",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pyannote-audio>=4.0.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "rich>=14.2.0",
    "soundfile>=0.13.1",
    "textgrid>=1.5",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "uroman>=1.3.1",
    "whisperx>=3.0.0",
]

[dependency-groups]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["local_transcribe*"]
